--- a/Application/Admin/View/themes/Public/left.html
+++ b/Application/Admin/View/themes/Public/left.html
@@ -100,6 +100,9 @@
                         </a>
                         <ul class="nav nav-second-level">
                             <li>
+                                <a href="{:U('Productinfo/product_type_list')}">产品类型管理</a>
+                            </li>
+                            <li>
                                 <a href="{:U('Productinfo/product_launch')}">产品发布</a>
                             </li>
                             <li>
