--- a/Application/Home/View/themes/Products/index.html
+++ b/Application/Home/View/themes/Products/index.html
@@ -59,7 +59,7 @@
 		<div class="prod">
 			<!--01-->
 			<div class="prodCon">
-				<h3><a href="javascript:;">美 桔 1 号</a></h3>
+				<h3><a href="{:U('Products/chanpinxiangqing')}">美 桔 1 号</a></h3>
 				<ul>
 					<li><p>10.60</p>年化收益率( % )</li>
 					<li><p>1080</p>锁定期限（天）</li>
