--- a/Application/Home/View/themes/Public/top.html
+++ b/Application/Home/View/themes/Public/top.html
@@ -1,5 +1,5 @@
 ﻿	<block name="top">
-				<!--快捷通道	bar 开始-->
+		<!--快捷通道	bar 开始-->
 		<div class="barOut">
 			<div class="bar">
 				<!--barLeft start-->
@@ -37,6 +37,9 @@
 		</div>
 		<!--快捷通道	bar 结束-->
 		
+		<!--锚点-->
+		<a name="returnTop" id="returnTop"> </a>
+		
 		<!--导航栏	nav 开始-->
 		<div class="navOut">
 			<div class="nav">
@@ -51,4 +54,9 @@
 			</div>
 		</div>
 		<!--导航栏	nav 结束-->
+		
+		<!--返回顶部-->
+		<div class="returntop">
+			<a href="#returnTop">&nbsp;</a>
+		</div>
 	</block>
