--- a/Application/Home/View/themes/Products/chanpinxiangqing.html
+++ b/Application/Home/View/themes/Products/chanpinxiangqing.html
@@ -146,6 +146,22 @@
 				</div>
 			</div>
 			<!--prodDetConT end---->
+			
+			<!--产品支付时支付密码弹出框	start-->
+			<div class="payOut">
+				<div class="pay">
+					<p>请输入您的交易密码</p>
+					<dl>
+						<dt><input type="password" name="" id="" value="" class="payPassw"/></dt>
+						<dd><a href="javascript:;">忘记交易密码？</a></dd>
+					</dl>
+					<div class="btn">
+						<input type="button" name="" id="" value="确  定" class="sure"/>
+						<input type="button" name="" id="" value="取  消" class="close"/>
+					</div>
+				</div>
+			</div>
+			<!--产品支付时支付密码弹出框	end-->
 		</div>
 		<!--产品详情		Product Details	  end---->		
 		
