--- a/Application/Home/View/themes/User/register.html
+++ b/Application/Home/View/themes/User/register.html
@@ -42,7 +42,7 @@
 							<dd><input type="text" name="friends" id="" value="" /></dd>
 						</dl>
 						
-						<p><input type="checkbox" name="xieyi" id="" value="1" class="registerChe" /><span>我已经阅读，并同意<a href="javascript:;">《网站服务协议》</a>和<a href="javascript:;">《使用条款》</a></span></p>
+						<p><input type="checkbox" name="xieyi" id="" value="1" class="registerChe" checked="checked"/><span>我已经阅读，并同意<a href="javascript:;">《网站服务协议》</a>和<a href="javascript:;">《使用条款》</a></span></p>
 						<input type="button" id="re_sub" value="" class="registerBtn"/>
 					</div>
 				</form>
