--- a/Application/Home/View/themes/Index/me.html
+++ b/Application/Home/View/themes/Index/me.html
@@ -18,16 +18,16 @@
 				<!--网站公告列表  	start-->
 				<div class="aboutList tab">
 					<ul>				
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>		
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>		
 					</ul>
 				</div>
 				<!--网站公告列表  end-->
@@ -35,16 +35,16 @@
 				<!--新闻动态列表		start-->
 				<div class="aboutList tab" style="display: none;">
 					<ul>				
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>		
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>		
 					</ul>
 				</div>
 				<!--新闻动态列表   	start-->
@@ -52,16 +52,16 @@
 				<!--行业新闻		start-->
 				<div class="aboutList tab" style="display: none;">
 					<ul>				
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>		
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
+						<li><a href="javascript:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>		
 					</ul>
 				</div>	
 				<!--行业新闻		end-->
