--- a/Application/Home/View/themes/Public/footer.html
+++ b/Application/Home/View/themes/Public/footer.html
@@ -8,24 +8,24 @@
 					<ul>
 						<li>
 							<h4><a href="{:U('Index/me')}">关于我们</a></h4>
-							<p><a href="javasvript:;">公司简介</a></p>
-							<p><a href="javasvript:;">服务项目</a></p>
-							<p><a href="javasvript:;">核心优势</a></p>
-							<p><a href="javasvript:;">联系我们</a></p>
+							<p><a href="javascript:;">公司简介</a></p>
+							<p><a href="javascript:;">服务项目</a></p>
+							<p><a href="javascript:;">核心优势</a></p>
+							<p><a href="javascript:;">联系我们</a></p>
 						</li>
 						<li>
 							<h4>协议与规则</h4>
-							<p><a href="javasvript:;">交易服务协议</a></p>
-							<p><a href="javasvript:;">平台交易规则</a></p>
-							<p><a href="javasvript:;">信息发布规则</a></p>
-							<p><a href="javasvript:;">买家委托规则</a></p>
+							<p><a href="javascript:;">交易服务协议</a></p>
+							<p><a href="javascript:;">平台交易规则</a></p>
+							<p><a href="javascript:;">信息发布规则</a></p>
+							<p><a href="javascript:;">买家委托规则</a></p>
 						</li>
 						<li>
 							<h4>新手帮助</h4>
-							<p><a href="javasvript:;">风险提示</a></p>
-							<p><a href="javasvript:;">注册登录</a></p>
-							<p><a href="javasvript:;">账户安全</a></p>
-							<p><a href="javasvript:;">资费说明</a></p>
+							<p><a href="javascript:;">风险提示</a></p>
+							<p><a href="javascript:;">注册登录</a></p>
+							<p><a href="javascript:;">账户安全</a></p>
+							<p><a href="javascript:;">资费说明</a></p>
 						</li>
 					</ul>
 					<div class="topR">
