--- a/Public/Home/css/style.css
+++ b/Public/Home/css/style.css
@@ -138,7 +138,9 @@ a:hover{color: #e60000; text-decoration: none;}
 .con .conL .proList .proListCon{width: 838px; height: auto; border: 1px solid #eee; padding: 5px; background: #fff;}
 .con .conL .proList .proListCon .list{width: 768px; height: 100px; border-bottom: 1px solid #eee; padding: 0 35px;}
 /*列表标题*/
-.con .conL .proList .proListCon .list h3 strong{font-weight: normal; font-size: 14px; height: 30px; line-height: 30px; display: inline-block; width: 70%; font-weight: normal;}
+.con .conL .proList .proListCon .list h3 strong{font-weight: normal; font-size: 18px; height: 30px; line-height: 30px; display: inline-block; width: 70%; font-weight: normal;}
+.con .conL .proList .proListCon .list h3 strong a{color: #555;}
+.con .conL .proList .proListCon .list h3 strong a:hover{color: #E60000;}
 .con .conL .proList .proListCon .list h3 span{display: inline-block; width: 28%; text-align: right; font-size: 12px;  font-weight: normal;}
 .con .conL .proList .proListCon .list h3 span b{ font-weight: normal;}
 /*列表内容*/
@@ -208,6 +210,8 @@ a:hover{color: #e60000; text-decoration: none;}
 .footer .top ul{float: left; overflow: hidden;}
 .footer .top ul li{float: left; width: auto; text-align: center; margin:0 40px; font-size: 14px;}
 .footer .top ul li h4{color: #fff; font-size: 16px; font-weight: normal; line-height: 36px;}
+.footer .top ul li h4 a{color: #fff;}
+.footer .top ul li h4 a:hover{text-decoration: underline;}
 .footer .top ul li p{line-height: 30px;}
 .footer .top ul li p a{color: #fff;}
 .footer .top ul li p a:hover{text-decoration: underline;}
