--- a/Application/Admin/View/themes/Productinfo/product_detail.html
+++ b/Application/Admin/View/themes/Productinfo/product_detail.html
@@ -1,36 +1,10 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="renderer" content="webkit">
-
-    <title>素材火www.sucaihuo.com - 项目详情</title>
-    <meta name="keywords" content="H+后台主题,后台bootstrap框架,会员中心主题,后台HTML,响应式后台">
-    <meta name="description" content="H+是一个完全响应式，基于Bootstrap3最新版本开发的扁平化主题，她采用了主流的左右两栏式布局，使用了Html5+CSS3等现代技术">
-
-    <link href="__PUBLIC__/Admin/css/bootstrap.min.css?v=3.4.0" rel="stylesheet">
-    <link href="__PUBLIC__/Admin/font-awesome/css/font-awesome.css?v=4.3.0" rel="stylesheet">
-
-    <link href="__PUBLIC__/Admin/css/animate.css" rel="stylesheet">
-    <link href="__PUBLIC__/Admin/css/style.css?v=2.2.0" rel="stylesheet">
-
-</head>
-
-<body>
+<block name="body"><extend name="Base/common"/>
     <div id="wrapper">
         <div id="page-wrapper" class="gray-bg dashbard-1">
             <div class="row wrapper border-bottom white-bg page-heading">
                 <div class="col-sm-4">
-                    <h2>项目详情</h2>
+                    <h2>产品详情</h2>
                     <ol class="breadcrumb">
-                        <li>
-                            <a href="index.html">主页</a>
-                        </li>
-                        <li>
-                            <strong>项目详情</strong>
-                        </li>
                     </ol>
                 </div>
             </div>
@@ -43,7 +17,7 @@
                                     <div class="col-lg-12">
                                         <div class="m-b-md">
                                             <a href="project_detail.html#" class="btn btn-white btn-xs pull-right">编辑项目</a>
-                                            <h2>阿里巴巴集团</h2>
+                                            <h2>{$data.asad }</h2>
                                         </div>
                                         <dl class="dl-horizontal">
                                             <dt>状态：</dt> 
@@ -53,21 +27,20 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg-5">
+                                    <div class="col-lg-5" style="width:40%;">
                                         <dl class="dl-horizontal">
 
-                                            <dt>项目经理：</dt> 
+                                            <dt>产品价格：</dt> 
                                             <dd>Beaut-zihan</dd>
-                                            <dt>消息：</dt> 
+                                            <dt>数量：</dt> 
                                             <dd>162</dd>
-                                            <dt>客户：</dt> 
-                                            <dd><a href="project_detail.html#" class="text-navy"> 百度</a> 
-                                            </dd>
+                                            <dt>年收益率：</dt> 
+                                            <dd>12.5%</dd>
                                             <dt>版本：</dt> 
                                             <dd>v1.4.2</dd>
                                         </dl>
                                     </div>
-                                    <div class="col-lg-7" id="cluster_info">
+                                    <div class="col-lg-7" id="cluster_info" style="width:60%;">
                                         <dl class="dl-horizontal">
 
                                             <dt>最后更新：</dt> 
@@ -303,9 +276,4 @@
             }
         }
     </script>
-
-    <script type="text/javascript" src="http://tajs.qq.com/stats?sId=9051096" charset="UTF-8"></script><!--统计代码，可删除-->
-
-</body>
-
-</html>
+</block>
