--- a/Application/Admin/View/themes/Productinfo/product_edit.html
+++ b/Application/Admin/View/themes/Productinfo/product_edit.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv='Content-Type' content='text/html; charset='>
-<title>在此插入标题</title>
+<title>缂栬緫</title>
 </head>
 <body>
 
