--- a/Application/Admin/View/themes/Public/footer.html
+++ b/Application/Admin/View/themes/Public/footer.html
@@ -1,8 +1,8 @@
   <div class="footer">
       <div class="pull-right">
-          By：<a href="http://www.zi-han.net" target="_blank">zihan's blog</a>
+          By：<a href="http://www.zi-han.net" target="_blank">投富宝技术团队开发组</a>
       </div>
       <div>
-          <strong>Copyright</strong> H+ &copy; 2014
+          <strong>Copyright</strong> 深圳市工合互联网信息服务有限公司 &copy; 2015
       </div>
   </div>
