--- a/Application/Admin/View/themes/Public/head.html
+++ b/Application/Admin/View/themes/Public/head.html
@@ -32,6 +32,11 @@
 
     <!-- 产品发布 -->
     <link href="__PUBLIC__/Admin/css/plugins/steps/jquery.steps.css" rel="stylesheet">
+
+    <!-- 文件上传 -->
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/Admin/css/plugins/webuploader/webuploader.css">
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/Admin/css/demo/webuploader-demo.css">
+
     <!-- Flot -->
     <script src="__PUBLIC__/Admin/js/plugins/flot/jquery.flot.js"></script>
     <script src="__PUBLIC__/Admin/js/plugins/flot/jquery.flot.tooltip.min.js"></script>
@@ -52,7 +57,6 @@
     <script src="__PUBLIC__/Admin/js/demo/sparkline-demo.js"></script>
 
     <!-- Custom and plugin javascript -->
-	<script type="text/javascript" src="http://tajs.qq.com/stats?sId=9051096" charset="UTF-8"></script>
     <script src="__PUBLIC__/Admin/js/plugins/iCheck/icheck.min.js"></script>
 
     <script src="__PUBLIC__/Admin/js/plugins/flot/jquery.flot.symbol.js"></script>
@@ -109,7 +113,15 @@
         <!-- SUMMERNOTE -->
     <script src="__PUBLIC__/Admin/js/plugins/summernote/summernote.min.js"></script>
     <script src="__PUBLIC__/Admin/js/plugins/summernote/summernote-zh-CN.js"></script>
+	
+	    <!-- Steps -->
+    <script src="__PUBLIC__/Admin/js/plugins/steps/jquery.steps.min.js"></script>
 
+    <!-- Web Uploader -->
+
+    <script src="__PUBLIC__/Admin/js/plugins/webuploader/webuploader.min.js"></script>
+
+    <script src="__PUBLIC__/Admin/js/demo/webuploader-demo.js"></script> 
 </head>
 
 </html>
